--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-.idea
+.idea/
 .vscode
 *.ai
 *.log
@@ -9,4 +9,4 @@ node_modules/
 npm-debug.*
 Thumbs.db
 dist/
-.parcel-cache
+.parcel-cache/
