--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel src/pages/index.hbs --no-cache --port 3000",
-    "build": "parcel build src/pages/index.hbs && node ./server.js",
+    "build": "parcel build src/pages/index.hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
