--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel src/pages/index.hbs --no-cache --port 3000",
+    "start": "parcel src/pages/index.hbs --no-cache --port 3000 --open",
     "build": "parcel build src/pages/index.hbs && node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,12 +14,13 @@
     "node": ">= 12.0.0"
   },
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.9",
-    "parcel": "^2.8.0",
-    "postcss-import": "^15.0.1",
-    "postcss-nested": "^6.0.0"
+    "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "parcel": "2.8.0",
+    "postcss-import": "15.0.1",
+    "postcss-nested": "6.0.0",
+    "postcss-simple-vars": "7.0.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "4.18.2"
   }
 }
