--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "eslint": "^8.30.0",
     "parcel": "2.8.0",
     "postcss-import": "15.0.1",
     "postcss-nested": "6.0.0",
-    "postcss-simple-vars": "7.0.1"
+    "postcss-simple-vars": "7.0.1",
+    "stylelint": "^14.16.0"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "typescript": "4.9.4"
   }
 }
