--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 root: true
 
 parserOptions:
-  ecmaVersion: 2015
+  ecmaVersion: 2017
   sourceType: 'module'
 
 env:
@@ -9,4 +9,7 @@ env:
   browser: true
   commonjs: true
 
-extends: "./eslintconfig.js"
+extends: [
+  "plugin:@typescript-eslint/recommended",
+  "./eslintconfig.js"
+  ]
