--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "postcss-import": "15.0.1",
     "postcss-nested": "6.0.0",
     "postcss-simple-vars": "7.0.1",
-    "stylelint": "14.16.0"
+    "stylelint": "14.16.0",
+    "typescript": "4.9.4"
   },
   "dependencies": {
     "express": "4.18.2",
-    "nanoid": "4.0.0",
-    "typescript": "4.9.4"
+    "nanoid": "4.0.0"
   }
 }
