--- a/netlify.toml
+++ b/netlify.toml
@@ -6,4 +6,10 @@
 # “publish” is the directory to publish (relative to the root of your repo).
 
 [build]
-  publish = "dist" 
+  baze = "/"
+  publish = "dist"
+
+[[redirects]]
+  from = "/*"
+  to = "/"
+  status = 200
