--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel src/index.html --no-cache --port 3000 --open",
-    "build": "parcel build src/index.html && node ./server.js",
-    "test": "node_modules/.bin/eslint ."
+    "start": "npm run build && node server.js",
+    "dev": "npm run build && webpack serve",
+    "build": "webpack",
+    "lint": "stylelint \"**/*.css\""
   },
   "alias": {
     "core": "./src/core",
@@ -31,18 +32,37 @@
       }
     }
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
     "eslint": "8.30.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
+    "mini-css-extract-plugin": "^2.7.2",
     "parcel": "2.8.0",
     "postcss": "8.4.20",
     "postcss-import": "15.0.1",
+    "postcss-loader": "^7.0.2",
     "postcss-nested": "6.0.0",
     "postcss-simple-vars": "7.0.1",
+    "style-loader": "^3.3.1",
     "stylelint": "14.16.0",
-    "typescript": "4.9.4"
+    "ts-loader": "^9.4.2",
+    "typescript": "4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "express": "4.18.2",
