--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run build && node server.js",
     "dev": "npm run build && webpack serve",
     "build": "webpack",
-    "lint": "stylelint \"**/*.css\"",
+    "lint": "eslint src && stylelint \"**/*.css\"",
     "test": "jest",
     "prepare": "husky install"
   },
@@ -42,7 +42,7 @@
   },
   "lint-staged": {
     "*.css": [
-      "eslint"
+      "eslint src"
     ]
   },
   "browserslist": {
