--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     }
   },
   "lint-staged": {
-    "**/*.css": [
+    "*.css": [
       "eslint src"
-    ]
+    ],
+    "*.ts": "jest"
   },
   "browserslist": {
     "production": [
@@ -77,7 +78,6 @@
     "file-loader": "6.2.0",
     "html-loader": "4.2.0",
     "html-webpack-plugin": "5.5.0",
-    "husky": "^8.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.5.1",
     "lint-staged": "^13.1.0",
@@ -97,7 +97,8 @@
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1",
-    "whatwg-fetch": "3.6.2"
+    "whatwg-fetch": "3.6.2",
+    "husky": "8.0.0"
   },
   "dependencies": {
     "babel-core": "6.26.3",
