--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     }
   },
   "lint-staged": {
-    "*.css": "eslint src",
-    "*": "npm run test"
+    "*.css": "eslint src"
 
   },
   "browserslist": {
